# TriFlow-AI

./: .env.example  .env.production.example  .env.staging.example  .gitignore  AI_GUIDELINES.md  AUDIT_LOG_TOTAL_COUNT_COMPLETE.md  BI_SEED_DATA_COMPLETE.md  BI_TESTING_STRATEGY.md  CANARY_NOTIFICATION_COMPLETE.md  CLEANUP_COMPLETE.md  COMPREHENSIVE_ANALYSIS_REPORT.md  FINAL_DAILY_SUMMARY_2026-01-22.md  FINAL_SUMMARY.md  FINAL_SUMMARY_2026-01-22_EVENING.md  LLM_OPTIMIZATION_COMPLETION.md  NEXT_ACTIONS_REAL.md  NEXT_PRIORITY_TASKS.md  PROMPT_TUNING_COMPLETE.md  QUICK_WINS_RECOMMENDATION.md  README.md  REDIS_PUBSUB_REALTIME_COMPLETE.md  REFACTORING_GUIDE.md  REMAINING_TASKS_RECOMMENDATION.md  REMAINING_WORK_FINAL_ANALYSIS.md  SPEC_VS_IMPLEMENTATION_GAP_ANALYSIS.md  TASKS.md  TESTING_VERIFICATION_COMPLETE.md  TODAY_COMPLETION_SUMMARY_2026-01-22.md  WHY_SEED_DATA_NEEDED.md  WORKFLOW_ENGINE_TODO_ANALYSIS.md  WORKFLOW_ROLLBACK_COMPLETE.md  docker-compose.localstack.yml  docker-compose.prod.yml  docker-compose.yml  kill_backends.bat  restart_backend.bat  start.ps1  start_debug.bat  stop.bat  stop.ps1
.claude/: DEBUG_SESSION_2026_01_20.md  NEXT_SESSION.md  settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.test.yml  generate_sample_sensors.py  mcp_test_server.py  pytest.ini  requirements-core.txt  requirements-dev.txt  requirements-ml.txt  (+4 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
(+709 files in other folders)
